objects/fcio1__Fullcast_Dupe_Action__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Duplicate_Set_Id__c</fullName>
        <label>Duplicate Set Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fullcast Dupe Actions</relationshipLabel>
        <relationshipName>Dupe_Master_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fullcast Dupe Action</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fullcast Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Dupe Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>